# BuscarLeads

./: .env.example  .gitignore  Makefile  SETUP.md  docker-compose.yml
.claude/: settings.json
.claude-mirror/memory/: MEMORY.md  feedback_commits.md  feedback_mirror_sync.md  project_competidores_pricing.md  project_espana_profundo.md  project_expansion_ayudas.md  project_icp_nichos.md  project_legal_compliance.md  project_modelo_negocio.md  project_reconciliacion_datos.md  project_riesgos_criticos.md  project_tam_mercados.md  project_unit_economics.md  project_ventas_outbound.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  seed.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routers/: auth.py  campaigns.py  dashboard.py  exports.py  leads.py  verticals.py
backend/app/api/schemas/: campaign.py  common.py  lead.py
backend/app/discovery/: dedup.py  engine.py  geo.py
backend/app/discovery/adapters/: base.py  google_maps_scraper.py  google_places_api.py
backend/app/enrichment/: perplexity_enricher.py  phone_normalizer.py  pipeline.py  robinson.py  web_checker.py
backend/app/export/: csv_exporter.py
backend/app/models/: __init__.py  business.py  campaign.py  outreach.py  region.py  user.py  vertical.py
backend/app/scoring/: scorer.py
backend/app/tasks/: celery_app.py  discovery_tasks.py  enrichment_tasks.py  scoring_tasks.py
backend/data/: regions.yaml  verticals.yaml
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  (+2 more)
(+2 files in other folders)
